@@ -5,9 +5,6 @@
 (eval-when (:load-toplevel :execute)
   (setq *backend* :iolib))
 
-(defun get-host-name ()
-  )
-
 (defparameter +iolib-error-map+
   '((:address-in-use . address-in-use-error)
     (:address-not-available . address-not-available-error)
@@ -30,35 +27,71 @@
                        timeout deadline
                        (nodelay t) ;; nodelay == t is the ACL default
                        local-host local-port)
-  )
+  (with-mapped-conditions ()
+    (let* ((remote (when (and host port)
+		     (car (get-hosts-by-name (host-to-hostname host)))))
+	   (local  (when (and local-host local-port)
+		     (car (get-hosts-by-name (host-to-hostname local-host)))))
+	   (ipv6 (or (and remote (= 16 (length remote)))
+		     (and local (= 16 (length local)))))
+	   (socket (apply #'iolib:make-socket
+			  `(:type ,protocol
+			    :address-family :internet
+			    :ipv6 ipv6
+			    :connect ,(if (eq protocol :stream) :active
+					(if (and host port) :active
+					  :passive))
+			    ,@(when remote
+				`(:remote-host remove :remote-port port))
+			    ,@(when local
+				`(:local-host local-host :local-port local-port))
+			    :nodelay nodelay))))
+      (ecase protocol
+	(:stream
+	 (make-stream-socket :stream socket :socket socket))
+	(:datagram
+	 (make-datagram-socket socket :connected-p (and remote t)))))))
 
 (defmethod socket-close ((usocket usocket))
-  )
+  (close (socket usocket)))
 
 (defmethod socket-shutdown ((usocket stream-usocket) direction)
-  )
+  (apply #'iolib:shutdown
+	 `(,(socket usocket) ,@(case direction
+				 (:input '(:read t))
+				 (:output '(:write t))
+				 (:io '(:read t :write t))))))
 
 (defun socket-listen (host port
                            &key reuseaddress
                            (reuse-address nil reuse-address-supplied-p)
                            (backlog 5)
                            (element-type 'character))
-  )
+  (with-mapped-conditions ()
+    (make-stream-server-socket
+      (iolib:make-socket :connect :passive
+			 :address-family :internet
+			 :local-host host
+			 :local-port port
+			 :backlog backlog
+			 :reuse-address (or reuse-address reuseaddress)))))
 
 (defmethod socket-accept ((socket stream-server-usocket) &key element-type)
-  )
+  (with-mapped-condtitions (usocket)
+    (let ((socket (iolib:accept-connection (socket usocket))))
+      (make-stream-socket :socket socket :stream socket))))
 
 (defmethod get-local-address ((usocket usocket))
-  )
+  (iolib:local-host (socket usocket)))
 
 (defmethod get-peer-address ((usocket stream-usocket))
-  )
+  (iolib:remote-host (socket usocket)))
 
 (defmethod get-local-port ((usocket usocket))
-  )
+  (iolib:local-port (socket usocket)))
 
 (defmethod get-peer-port ((usocket stream-usocket))
-  )
+  (iolib:remote-port (socket usocket)))
 
 (defmethod get-local-name ((usocket usocket))
   (values (get-local-address usocket)
@@ -69,16 +102,14 @@
           (get-peer-port usocket)))
 
 (defmethod socket-send ((usocket datagram-usocket) buffer size &key host port (offset 0))
-  )
+  (iolib:send-to (socket usocket) buffer :start offset :end (+ offset size)
+		 :remote-host host :remote-port port))
 
-(defmethod socket-receive ((socket datagram-usocket) buffer length &key)
-  )
-
-(defun get-host-by-address (address)
-  )
+(defmethod socket-receive ((usocket datagram-usocket) buffer length &key start end)
+  (iolib:receive-from (socket usocket) :buffer buffer :size length :start start :end end))
 
 (defun get-hosts-by-name (name)
-  )
+  (iolib:lookup-hostname name))
 
 (defun %setup-wait-list (wait-list)
   )
